--- a/app/index.html
+++ b/app/index.html
@@ -4,12 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado Rural</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="./images/icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./images/icon/favicon-16x16.png">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" type="favicon" href="./images/favicon.ico">
 </head>
 <body>
-    <h1>oi</h1>
+    <iframe src="header.html" style="width: 100%; height: 75px; border: none;"></iframe>
+    <br>
+    <section class="banner">
+      <img src="./images/img-banner.jpg" alt="Imagem que faz referência a um pequeno produtor realizando o plantio de uma muda." class="imagem-banner">
+      <div class="texto-banner">
+          <h1>Mercado Rural</h1>
+          <p>Bem-vindo ao Nosso Site, estamos felizes em tê-lo aqui!</p>
+      </div>
+    </section>
+    <br>
+    <br>
+    <section class="cards">
+      <div class="card">
+          <h2>Sobre Nós</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna ac urna laoreet gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna ac urna laoreet gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna ac urna laoreet gravida.</p>
+          <a href="#" class="btn">Confira nossos produtores</a>
+      </div>
+      <div class="card">
+          <h2>Junte-se a nós</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna ac urna laoreet gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna ac urna laoreet gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna ac urna laoreet gravida.</p>
+          <a href="#" class="btn">Cadastre-se como produtor</a>
+      </div>
+    </section>
+    <br>
+    <iframe src="footer.html" style="width: 100%; height: 75px; border: none;"></iframe>
 </body>
 </html>
