correção e responsividade na index e no footer

--- a/app/index.html
+++ b/app/index.html
@@ -8,13 +8,13 @@
     <link rel="icon" type="favicon" href="./images/favicon.ico">
 </head>
 <body>
-    <iframe src="header.html" style="width: 100%; height: 75px; border: none;"></iframe>
+    <iframe src="header.html" class="header"></iframe>
     <br>
     <section class="banner">
       <img src="./images/img-banner.jpg" alt="Imagem que faz referência a um pequeno produtor realizando o plantio de uma muda." class="imagem-banner">
       <div class="texto-banner">
           <h1>Mercado Rural</h1>
-          <p>Bem-vindo ao Nosso Site, estamos felizes em tê-lo aqui!</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna ac urna laoreet gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
     </section>
     <br>
@@ -23,15 +23,17 @@
       <div class="card">
           <h2>Sobre Nós</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna ac urna laoreet gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna ac urna laoreet gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna ac urna laoreet gravida.</p>
-          <a href="#" class="btn">Confira nossos produtores</a>
+          <br>
+          <a href="./cliente/produtores.html" class="btn">Confira nossos produtores</a>
       </div>
       <div class="card">
           <h2>Junte-se a nós</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna ac urna laoreet gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna ac urna laoreet gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna ac urna laoreet gravida.</p>
+          <br>
           <a href="#" class="btn">Cadastre-se como produtor</a>
       </div>
     </section>
     <br>
-    <iframe src="footer.html" style="width: 100%; height: 75px; border: none;"></iframe>
+    <iframe src="footer.html" class="footer"></iframe>
 </body>
 </html>
