--- a/app/footer.html
+++ b/app/footer.html
@@ -1,21 +1,4 @@
-<style>
-    body {
-        margin: 0;
-    }
-
-    footer {
-        background-color: #043b22;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
-    }
-
-    footer p {
-        font-size: 1.2rem;
-        color: white;
-    }
-</style>
+<link rel="stylesheet" href="./css/footer.css">
 <footer>
-    <p>© All Rigths Reserved - EcoGlobe 2024</p> 
+    <p>&copy; All Rigths Reserved - Mercado Rural 2024</p> 
 </footer>
