Inserindo textos da homepage

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mercado Rural — Produtos Orgânicos</title>
+    <title>Mercado Rural - Produtos Orgânicos</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="icon" type="favicon" href="./images/favicon.ico">
@@ -14,8 +14,9 @@
     <section class="banner">
       <img src="./images/img-banner.jpg" alt="Imagem que faz referência a um pequeno produtor realizando o plantio de uma muda." class="imagem-banner">
       <div class="texto-banner">
+          <p>Seja bem vindo ao</p>
           <h1>Mercado Rural</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna ac urna laoreet gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <p>Compre produtos orgânicos de qualidade direto de pequenos produtores e apoie a agricultura sustentável.</p>
       </div>
     </section>
     <br>
@@ -23,13 +24,13 @@
     <section class="cards">
       <div class="card">
           <h2>Sobre Nós</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna ac urna laoreet gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna ac urna laoreet gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna ac urna laoreet gravida.</p>
+          <p>Nosso objetivo é conectar pequenos produtores rurais diretamente com você, proporcionando acesso a uma variedade de produtos orgânicos de alta qualidade. Explore nossa seleção de frutas, verduras, produtos artesanais e muito mais, todos cultivados com práticas que respeitam o meio ambiente.</p>
           <br>
           <a href="./cliente/produtores.html" class="btn">Confira nossos produtores</a>
       </div>
       <div class="card">
           <h2>Junte-se a nós</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna ac urna laoreet gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna ac urna laoreet gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non urna ac urna laoreet gravida.</p>
+          <p>Faça parte da nossa rede e ajude a construir um futuro mais sustentável para o planeta. Registre-se como produtor e ofereça seus produtos para consumidores em busca de alimentos saudáveis e sustentáveis. Contribua para um futuro mais verde, garantindo alimentos de qualidade para todos.</p>
           <br>
           <a href="#" class="btn">Cadastre-se como produtor</a>
       </div>
