Refatoração header e css geral com variaveis

--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
         <a href="./index.html" target="_top"><img src="./images/logo.png" alt="Logo do site Mercado Rural"></a>
     </div>
     <div class="links">
-        <a href="./cliente/produtores.html" target="_top">Produtores</a>
-        <a href="./contato.html" target="_top">Contato</a>
+        <button class="btn"><a href="./cliente/produtores.html" target="_top">Produtores</a></button>
+        <button class="btn"><a href="./contato.html" target="_top">Contato</a></button>
     </div>
 </header>
