--- a/cliente/produtores.html
+++ b/cliente/produtores.html
@@ -1,1 +1,47 @@
-<h1>Produtores</h1>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/produtores.css">
+    <link rel="icon" type="favicon" href="./images/favicon.ico">
+    <title>Produtores</title>
+</head>
+<body>
+    <iframe src="../header.html" class="header"></iframe>
+    <hr>
+    <h1 class="titulo">Confira nossos Produtores:</h1>
+    <br>
+
+
+
+
+    <label><input type="checkbox" id="todos" class="filtro" value="Todos" checked> Todos</label>
+	<label><input type="checkbox" class="filtro" value="Categoria 1"> Categoria 1</label>
+	<label><input type="checkbox" class="filtro" value="Categoria 2"> Categoria 2</label>
+	<label><input type="checkbox" class="filtro" value="Categoria 3"> Categoria 3</label>
+
+    <div id="Categoria 1" class="categoria">
+		<h2>Categoria 1</h2>
+		<p>Conteúdo da Categoria 1.</p>
+	</div>
+
+	<div id="Categoria 2" class="categoria">
+		<h2>Categoria 2</h2>
+		<p>Conteúdo da Categoria 2.</p>
+	</div>
+
+	<div id="Categoria 3" class="categoria">
+		<h2>Categoria 3</h2>
+		<p>Conteúdo da Categoria 3.</p>
+	</div>
+
+
+
+
+    <br>
+    <iframe src="../footer.html" class="footer"></iframe>
+</body>
+<script src="../js/filtro.js"></script>
+</html>
