--- a/cliente/produtores.html
+++ b/cliente/produtores.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/produtores.css">
-    <link rel="icon" type="favicon" href="./images/favicon.ico">
+    <link rel="icon" type="favicon" href="../images/favicon.ico">
     <title>Produtores</title>
 </head>
 <body>
@@ -13,33 +13,24 @@
     <hr>
     <h1 class="titulo">Confira nossos Produtores:</h1>
     <br>
-
-
-
-
-    <label><input type="checkbox" id="todos" class="filtro" value="Todos" checked> Todos</label>
-	<label><input type="checkbox" class="filtro" value="Categoria 1"> Categoria 1</label>
-	<label><input type="checkbox" class="filtro" value="Categoria 2"> Categoria 2</label>
-	<label><input type="checkbox" class="filtro" value="Categoria 3"> Categoria 3</label>
-
+    <select id="categoriaSelect" class="filtro">
+        <option value="Todos" selected>Todas</option>
+        <option value="Categoria 1">Categoria 1</option>
+        <option value="Categoria 2">Categoria 2</option>
+        <option value="Categoria 3">Categoria 3</option>
+    </select>
     <div id="Categoria 1" class="categoria">
 		<h2>Categoria 1</h2>
 		<p>Conteúdo da Categoria 1.</p>
 	</div>
-
 	<div id="Categoria 2" class="categoria">
 		<h2>Categoria 2</h2>
 		<p>Conteúdo da Categoria 2.</p>
 	</div>
-
 	<div id="Categoria 3" class="categoria">
 		<h2>Categoria 3</h2>
 		<p>Conteúdo da Categoria 3.</p>
 	</div>
-
-
-
-
     <br>
     <iframe src="../footer.html" class="footer"></iframe>
 </body>
