--- a/cliente/produtores.html
+++ b/cliente/produtores.html
@@ -22,14 +22,17 @@
     <div id="Categoria 1" class="categoria">
 		<h2>Categoria 1</h2>
 		<p>Conteúdo da Categoria 1.</p>
+        <a href="./produtores/produtor-1.html"></a>
 	</div>
 	<div id="Categoria 2" class="categoria">
 		<h2>Categoria 2</h2>
 		<p>Conteúdo da Categoria 2.</p>
+        <a href="./produtores/produtor-1.html"></a>
 	</div>
 	<div id="Categoria 3" class="categoria">
 		<h2>Categoria 3</h2>
 		<p>Conteúdo da Categoria 3.</p>
+        <a href="./produtores/produtor-1.html"></a>
 	</div>
     <br>
     <iframe src="../footer.html" class="footer"></iframe>
