--- a/cliente/produtores.html
+++ b/cliente/produtores.html
@@ -15,24 +15,18 @@
     <br>
     <select id="categoriaSelect" class="filtro">
         <option value="Todos" selected>Todas</option>
-        <option value="Categoria 1">Categoria 1</option>
-        <option value="Categoria 2">Categoria 2</option>
-        <option value="Categoria 3">Categoria 3</option>
+        <option value="curitiba">Curitiba</option>
+        <option value="sao-luiz">São Luiz do Purunã</option>
     </select>
-    <div id="Categoria 1" class="categoria">
-		<h2>Categoria 1</h2>
-		<p>Conteúdo da Categoria 1.</p>
-        <a href="./produtores/produtor-1.html"></a>
+    <div id="curitiba" class="categoria">
+		<h2>Curitiba</h2>
+		<p>Conteúdo de Curitiba.</p>
+        <a href="./produtores/produtor-1.html">Ver Mais</a>
 	</div>
-	<div id="Categoria 2" class="categoria">
-		<h2>Categoria 2</h2>
-		<p>Conteúdo da Categoria 2.</p>
-        <a href="./produtores/produtor-1.html"></a>
-	</div>
-	<div id="Categoria 3" class="categoria">
-		<h2>Categoria 3</h2>
-		<p>Conteúdo da Categoria 3.</p>
-        <a href="./produtores/produtor-1.html"></a>
+	<div id="sao-luiz" class="categoria">
+		<h2>São Luiz do Purunã</h2>
+		<p>Conteúdo de São Luiz do Purunã.</p>
+        <a href="./produtores/produtor-1.html">Ver Mais</a>
 	</div>
     <br>
     <iframe src="../footer.html" class="footer"></iframe>
