--- a/cliente/produtores/produtor-1.html
+++ b/cliente/produtores/produtor-1.html
@@ -34,7 +34,7 @@
                 </tr>
                 <tr class="row">
                   <th class="col-9"></th>
-                  <td class="col-3"><div id="">Botão</div></td>
+                  <td class="col-3"><button onclick="finalizarCompra()">Finalizar Compra</button></td>
                 </tr>
               </tbody>
             </table>     
