Pagina de produtores e correções

--- a/cliente/produtores.html
+++ b/cliente/produtores.html
@@ -12,22 +12,104 @@
     <iframe src="../header.html" class="header"></iframe>
     <hr>
     <h1 class="titulo">Confira nossos Produtores:</h1>
+    <div class="localidade">
+        <p>Selecione sua localidade:</p>
+        <select id="categoriaSelect" class="filtro">
+            <option value="Todos" selected>Todas</option>
+            <option value="curitiba">Curitiba</option>
+            <option value="sao-luiz">São Luiz do Purunã</option>
+        </select>
+        <p class="frete">Oferecemos frete grátis para compras na mesma cidade</p>
+    </div>
+    <section id="curitiba" class="categoria">
+		<h2 class="subtitulo">Produtores de Curitiba:</h2>
+        <div class="cards">
+            <div class="card">
+                <h2>Verde Vida</h2>
+                <p>Na Horta Verde Vida, em Curitiba/PR, oferecemos verduras frescas, saudáveis e de qualidade, estamos há mais de 5 anos no ramo. Conheça nossos produtos e sinta o frescor direto do campo!</p>
+                <h3>Principais Produtos:</h3>
+                <ul>
+                    <div class="lista">
+                        <li>Alface</li>
+                        <li>Agrião</li>
+                    </div>
+                    <div class="lista">
+                        <li>Salsinha</li>
+                        <li>Cebolinha</li>
+                    </div>
+                </ul>
+                <br>
+                <div class="botao">
+                    <a href="./produtores/produtor-1.html" class="btn">Ver Mais</a>
+                </div>
+            </div>
+            <div class="card">
+                <h2>Ervas do Campo</h2>
+                <p>Na Horta Ervas do Campo, em Curitiba/PR, cultivamos ervas aromáticas com dedicação há mais de 10 anos. Cuidamos de cada planta para garantir qualidade. Conheça nossas ervas frescas!</p>
+                <h3>Principais Produtos:</h3>
+                <ul>
+                    <div class="lista">
+                        <li>Orégano</li>
+                        <li>Tomilho</li>
+                    </div>
+                    <div class="lista">
+                        <li>Hortelã</li>
+                        <li>Alecrim</li>
+                    </div>
+                </ul>
+                <br>
+                <div class="botao">
+                    <a href="./produtores/produtor-2.html" class="btn">Ver Mais</a>
+                </div>
+            </div>
+        </div>
+        <br>
+	</section>
+	<section id="sao-luiz" class="categoria">
+		<h2 class="subtitulo">Produtores de São Luiz do Purunã:</h2>
+        <div class="cards">
+            <div class="card">
+                <h2>Fazenda Boa Vista</h2>
+                <p>Somos a Fazenda Boa Vista, localizada em São Luiz do Purunã/PR. Há mais de 12 anos, cultivamos frutas orgânicas com cuidado e afeto. Aqui, você encontra produtos frescos, sem agrotóxicos. Experimente e sinta a diferença!</p>
+                <h3>Principais Produtos:</h3>
+                <ul>
+                    <div class="lista">
+                        <li>Kiwi</li>
+                        <li>Azeitona</li>
+                    </div>
+                    <div class="lista">
+                        <li>Morango</li>
+                        <li>Pêssego</li>
+                    </div>
+                </ul>
+                <br>
+                <div class="botao">
+                    <a href="./produtores/produtor-3.html" class="btn">Ver Mais</a>
+                </div>
+            </div>
+            <div class="card">
+                <h2>Campo Alegre</h2>
+                <p>Somos a Fazenda Campo Alegre, localizada em São Luiz do Purunã/PR. Há 8 anos, nós nos especializamos em hortaliças orgânicas, cultivadas para lhe oferecer alimentos saudáveis e saborosos. Venha descobrir nossos produtos frescos!</p>
+                <h3>Principais Produtos:</h3>
+                <ul>
+                    <div class="lista">
+                        <li>Cenoura</li>
+                        <li>Beterraba</li>
+                    </div>
+                    <div class="lista">
+                        <li>Brócolis</li>
+                        <li>Cebola</li>
+                    </div>
+                </ul>
+                <br>
+                <div class="botao">
+                    <a href="./produtores/produtor-4.html" class="btn">Ver Mais</a>
+                </div>
+            </div>
+        </div>
+        <br>
+	</section>
     <br>
-    <select id="categoriaSelect" class="filtro">
-        <option value="Todos" selected>Todas</option>
-        <option value="curitiba">Curitiba</option>
-        <option value="sao-luiz">São Luiz do Purunã</option>
-    </select>
-    <div id="curitiba" class="categoria">
-		<h2>Curitiba</h2>
-		<p>Conteúdo de Curitiba.</p>
-        <a href="./produtores/produtor-1.html">Ver Mais</a>
-	</div>
-	<div id="sao-luiz" class="categoria">
-		<h2>São Luiz do Purunã</h2>
-		<p>Conteúdo de São Luiz do Purunã.</p>
-        <a href="./produtores/produtor-1.html">Ver Mais</a>
-	</div>
     <br>
     <iframe src="../footer.html" class="footer"></iframe>
 </body>
