--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="cards">
       <div class="card">
           <h2>Sobre Nós</h2>
-          <p>Nosso objetivo é conectar pequenos produtores rurais diretamente com você, proporcionando acesso a uma variedade de produtos orgânicos de alta qualidade. Explore nossa seleção de frutas, verduras, produtos artesanais e muito mais, todos cultivados com práticas que respeitam o meio ambiente.</p>
+          <p>Nosso objetivo é conectar pequenos produtores rurais diretamente com você, proporcionando acesso a uma variedade de produtos orgânicos de alta qualidade. Explore nossa seleção de frutas, verduras, hortaliças, ervas e muito mais, todos cultivados com práticas que respeitam o meio ambiente.</p>
           <br>
           <a href="./cliente/produtores.html" class="btn">Confira nossos produtores</a>
       </div>
