inicio do produtor

--- a/cliente/produtores/produtor-1.html
+++ b/cliente/produtores/produtor-1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +9,19 @@
     <title>Produtor 1</title>
 </head>
 <body>
+    <section class="info-produtor">
+      <div class="titulo">Horta Verde Vida</div>
+      <div class="produtor">
+        <img src="../../images/horta.jpg" alt="Imagem da Horta Verde Vida">
+        <div class="descricao">
+          <p>Na Horta Verde Vida, em Curitiba/PR, oferecemos verduras frescas, saudáveis e de qualidade, estamos há mais de 5 anos no ramo. Conheça nossos produtos e sinta o frescor direto do campo!</p>
+          <div class="contato">
+            <p>Telefone: (41) 99999-9999</p>
+            <p>CNPJ: 12.345.678/0001-90</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <div class="container">
         <div id="produtos"></div>
         <hr>
