finalizando produtor e responsividade

--- a/cliente/produtores.html
+++ b/cliente/produtores.html
@@ -44,8 +44,8 @@
                 </div>
             </div>
             <div class="card">
-                <h2>Ervas do Campo</h2>
-                <p>Na Horta Ervas do Campo, em Curitiba/PR, cultivamos ervas aromáticas com dedicação há mais de 10 anos. Cuidamos de cada planta para garantir qualidade. Conheça nossas ervas frescas!</p>
+                <h2>Ervas da Natureza</h2>
+                <p>Na Horta Ervas da Natureza, em Curitiba/PR, cultivamos ervas aromáticas com dedicação há mais de 10 anos. Cuidamos de cada planta para garantir qualidade. Conheça nossas ervas frescas!</p>
                 <h3>Principais Produtos:</h3>
                 <ul>
                     <div class="lista">
@@ -75,7 +75,7 @@
                 <ul>
                     <div class="lista">
                         <li>Kiwi</li>
-                        <li>Azeitona</li>
+                        <li>Maça</li>
                     </div>
                     <div class="lista">
                         <li>Morango</li>
