--- a/contato.html
+++ b/contato.html
@@ -1,1 +1,33 @@
-<h1>Contato</h1>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/contato.css">
+    <link rel="icon" type="favicon" href="./images/favicon.ico">
+    <title>Contato</title>
+</head>
+<body>
+    <iframe src="header.html" class="header"></iframe>
+    <br>
+    <section>
+        <div class="formulario">
+            <form>
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" name="nome" placeholder="Insira seu nome" required>
+                <br>
+                <br>
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" name="email" placeholder="exemplo@email.com" required>
+                <label for="mensagem">Sua Mensagem:</label>
+                <textarea id="mensagem" name="mensagem" placeholder="Insira sua mensagem ou sugestão" required></textarea>
+
+                <button class="btn" type="submit">Enviar</button>
+            </form>
+        </div>
+    </section>
+    <br>
+    <iframe src="footer.html" class="footer"></iframe>
+</body>
+</html>
