--- a/contato.html
+++ b/contato.html
@@ -10,24 +10,42 @@
 </head>
 <body>
     <iframe src="header.html" class="header"></iframe>
+    <hr>
+    <h1 class="titulo">Entre em contato conosco:</h1>
+    <br>
+    <br>
+    <p class="texto-contato">Para nós do Mercado Rural nossa prioridade sempre é você, para que tenha uma melhor experiência, compartilhe conosco seu feedback, mensagem, ou crítica, para que possamos sempre lhe oferecer o nosso melhor.</p>
+    <br>
     <br>
     <section>
         <div class="formulario">
-            <form>
+            <h2 class="subtitulo">Envie sua mensagem</h2>
+            <form class="campos-formulario" onsubmit="enviarFormulario()">
                 <label for="nome">Nome:</label>
-                <input type="text" id="nome" name="nome" placeholder="Insira seu nome" required>
+                <input type="text" id="nome" name="nome" placeholder="Insira seu nome completo" required>
                 <br>
                 <br>
                 <label for="email">E-mail:</label>
                 <input type="email" id="email" name="email" placeholder="exemplo@email.com" required>
-                <label for="mensagem">Sua Mensagem:</label>
-                <textarea id="mensagem" name="mensagem" placeholder="Insira sua mensagem ou sugestão" required></textarea>
-
-                <button class="btn" type="submit">Enviar</button>
+                <br>
+                <br>
+                <label for="mensagem">Mensagem:</label>
+                <textarea id="mensagem" name="mensagem" placeholder="Insira seu feedback ou avaliação" required></textarea>
+                <br>
+                <br>
+                <div class="botao">
+                    <button class="btn" type="submit">Enviar</button>
+                </div>
             </form>
         </div>
     </section>
     <br>
+    <br>
     <iframe src="footer.html" class="footer"></iframe>
+    <script>
+        function enviarFormulario() {
+            alert("Mensagem enviada com sucesso!")
+        }
+    </script>
 </body>
 </html>
