inicio do cadastro de produtor

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <h2>Junte-se a nós</h2>
           <p>Faça parte da nossa rede e ajude a construir um futuro mais sustentável para o planeta. Registre-se como produtor e ofereça seus produtos para consumidores em busca de alimentos saudáveis e sustentáveis. Contribua para um futuro mais verde, garantindo alimentos de qualidade para todos.</p>
           <br>
-          <a href="#" class="btn">Cadastre-se como produtor</a>
+          <a href="./produtor/cadastro.html" class="btn">Cadastre-se como produtor</a>
       </div>
     </section>
     <br>
