--- a/produtor/cadastro.html
+++ b/produtor/cadastro.html
@@ -11,44 +11,48 @@
 <body>
     <iframe src="../header.html" class="header"></iframe>
     <hr>
-    <h1 class="titulo">Junte-se a nós</h1>
-    <br>
-    <br>
-    <p class="texto-formulario">Faça parte da nossa família aqui no Mercado Rural, buscamos levar aos nossos clientes apenas produtos de qualidade cultivados com muito carinho. Preencha o formulario abaixo e junte-se a nós</p>
-    <br>
-    <br>
-    <section>
-        <div class="formulario">
-            <h2 class="subtitulo">Cadastro de Produtor</h2>
-            <form class="campos-formulario" onsubmit="enviarFormulario()">
-                <label for="nome">Nome:</label>
-                <input type="text" id="nome" name="nome" placeholder="Insira o nome do seu negócio" required>
-                <br>
-                <br>
-                <label for="email">E-mail:</label>
-                <input type="email" id="email" name="email" placeholder="Insira um email de conatato" required>
-                <br>
-                <br>
-                <label for="telefone">Telefone:</label>
-                <input type="tel" id="telefone" name="telefone" placeholder="Telefone para contato" required>
-                <br>
-                <br>
-                <label for="cnpj">CNPJ:</label>
-                <input type="text" id="cnpj" name="cnpj" placeholder="CNPJ do seu negócio" required>
-                <br>
-                <br>
-                <label for="descricao">Descrição:</label>
-                <textarea id="descricao" name="descricao" placeholder="Descreva seu negócio, a descrição será exibida aos clientes" required></textarea>
-                <br>
-                <br>
-                <div class="botao">
-                    <button class="btn" type="submit">Enviar</button>
-                </div>
-            </form>
-        </div>
+    <section id="cadastro">
+        <h1 class="titulo-cadastro">Junte-se a nós</h1>
+        <br>
+        <br>
+        <p class="texto-formulario">Faça parte da nossa família aqui no Mercado Rural, buscamos levar aos nossos clientes apenas produtos de qualidade cultivados com muito carinho. Preencha o formulario abaixo e junte-se a nós</p>
+        <br>
+        <br>
+        <section>
+            <div class="formulario">
+                <h2 class="subtitulo-formulario">Cadastro de Produtor</h2>
+                <form class="campos-formulario" onsubmit="enviarFormulario(event)">
+                    <label for="nome">Nome:</label>
+                    <input type="text" id="nome" name="nome" placeholder="Insira o nome do seu negócio" required>
+                    <br>
+                    <br>
+                    <label for="email">E-mail:</label>
+                    <input type="email" id="email" name="email" placeholder="Insira um email de conatato" required>
+                    <br>
+                    <br>
+                    <label for="telefone">Telefone:</label>
+                    <input type="tel" id="telefone" name="telefone" placeholder="Telefone para contato" required>
+                    <br>
+                    <br>
+                    <label for="cnpj">CNPJ:</label>
+                    <input type="text" id="cnpj" name="cnpj" placeholder="CNPJ do seu negócio" required>
+                    <br>
+                    <br>
+                    <label for="descricao">Descrição:</label>
+                    <textarea id="descricao" name="descricao" placeholder="Descreva seu negócio, a descrição será exibida aos clientes" required></textarea>
+                    <br>
+                    <br>
+                    <div class="botao">
+                        <button class="btn" type="submit">Enviar</button>
+                    </div>
+                </form>
+            </div>
+        </section>
     </section>
+    <section id="produtor"></section>
     <br>
     <br>
     <iframe src="../footer.html" class="footer"></iframe>
+    <script src="../js/cadastro.js"></script>
 </body>
 </html>
