--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="./css/footer.css">
 <footer>
-    <p>&copy; All Rigths Reserved - Mercado Rural 2024</p> 
+    <p>&copy; All Rigths Reserved - Mercado Rural 2024</p>
+    <!-- &copy adiciona o símbolo de copyright -->
 </footer>
