--- a/header.html
+++ b/header.html
@@ -3,6 +3,7 @@
     <div class="logo">
         <a href="./index.html" target="_top"><img src="./images/logo.png" alt="Logo do site Mercado Rural"></a>
     </div>
+    <!-- target="_top" faz o link aberto ocupar a página inteira, se não colocar abre apenas no iframe  -->
     <div class="links">
         <button class="btn"><a href="./cliente/produtores.html" target="_top">Produtores</a></button>
         <button class="btn"><a href="./contato.html" target="_top">Contato</a></button>
