--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <iframe src="header.html" class="header"></iframe>
+    <!-- Iframe permite exibir um outro arquivo html dentro da pagina, a estilização do header e do footer está no style.css -->
     <br>
     <section class="banner">
       <img src="./images/img-banner.jpg" alt="Imagem que faz referência a um pequeno produtor realizando o plantio de uma muda." class="imagem-banner">
