--- a/produtor/cadastro.html
+++ b/produtor/cadastro.html
@@ -11,6 +11,7 @@
 <body>
     <iframe src="../header.html" class="header"></iframe>
     <hr>
+    <!-- A pagina é dividida em duas, primeiro há o formulario e ao submete-lo chama uma função que captura os dados, esconde o formulário, e monta um 'produtor' no js de forma dinâmica -->
     <section id="cadastro">
         <h1 class="titulo-cadastro">Junte-se a nós</h1>
         <br>
@@ -22,8 +23,10 @@
             <div class="formulario">
                 <h2 class="subtitulo-formulario">Cadastro de Produtor</h2>
                 <form class="campos-formulario" onsubmit="enviarFormulario(event)">
+                    <!-- O event passado para a função que ativa ao enviar o form serve para impedir o comportamento padrão de recarregar a página -->
                     <label for="nome">Nome:</label>
                     <input type="text" id="nome" name="nome" placeholder="Insira o nome do seu negócio" required>
+                    <!-- No form o type tem relação em como o campo é exibido ou na formatação da informação, o id é usado para estilizar e capturar os dados e o name se relaciona com o for da label -->
                     <br>
                     <br>
                     <label for="email">E-mail:</label>
@@ -50,9 +53,11 @@
         </section>
     </section>
     <section id="produtor"></section>
+    <!-- Na section de id produtor é onde o 'produtor' é montado e exibido, seu html é adicionado no arquivo js de cadastro -->
     <br>
     <br>
     <iframe src="../footer.html" class="footer"></iframe>
     <script src="../js/cadastro.js"></script>
+    <!-- Importação do js da pagina -->
 </body>
 </html>
