comentarios js pt1

--- a/cliente/produtores.html
+++ b/cliente/produtores.html
@@ -19,7 +19,7 @@
             <option value="curitiba">Curitiba</option>
             <option value="sao-luiz">São Luiz do Purunã</option>
         </select>
-        <!-- No select é onde é feito o filtro, cada option tem um id que corresponde a uma section ou a todos, com as classes e os ids, os elementos são capturados e manipulados no filtro.js -->
+        <!-- No select é onde é feito o filtro, cada option tem um id que corresponde a uma section ou a todos, com os values e os ids, os elementos são capturados e manipulados no filtro.js -->
         <p class="frete">Oferecemos frete grátis para compras na mesma cidade</p>
     </div>
     <section id="curitiba" class="categoria">
