correção no css de descrição

--- a/cliente/produtores/produtor-1.html
+++ b/cliente/produtores/produtor-1.html
@@ -15,7 +15,7 @@
     <h1 class="titulo">Horta Verde Vida</h1>
     <div class="produtor">
       <img src="../../images/horta.jpg" alt="Imagem de uma horta">
-      <div class="descricao">
+      <div id="descricao">
         <p>Na Horta Verde Vida, em Curitiba/PR, oferecemos verduras frescas, saudáveis e de qualidade, estamos há mais de 5 anos no ramo. Conheça nossos produtos e sinta o frescor direto do campo!</p>
         <div class="contato">
           <p>Telefone: (41) 99999-9999</p>
