--- a/cliente/produtores/produtor-4.html
+++ b/cliente/produtores/produtor-4.html
@@ -15,7 +15,7 @@
     <h1 class="titulo">Campo Alegre</h1>
     <div class="produtor">
       <img src="../../images/horta.jpg" alt="Imagem de uma horta">
-      <div class="descricao">
+      <div id="descricao">
         <p>Somos a Fazenda Campo Alegre, localizada em São Luiz do Purunã/PR. Há 8 anos, nós nos especializamos em hortaliças orgânicas, cultivadas para lhe oferecer alimentos saudáveis e saborosos. Venha descobrir nossos produtos frescos!</p>
         <div class="contato">
           <p>Telefone: (41) 99999-9999</p>
