--- a/cliente/produtores/produtor-2.html
+++ b/cliente/produtores/produtor-2.html
@@ -15,7 +15,7 @@
     <h1 class="titulo">Ervas da Natureza</h1>
     <div class="produtor">
       <img src="../../images/horta.jpg" alt="Imagem de uma horta">
-      <div id="descricao">
+      <div class="descricao">
         <p>Na Horta Ervas da Natureza, em Curitiba/PR, cultivamos ervas aromáticas com dedicação há mais de 10 anos. Cuidamos de cada planta para garantir qualidade. Conheça nossas ervas frescas!</p>
         <div class="contato">
           <p>Telefone: (41) 99999-9999</p>
