--- a/cliente/produtores/produtor-3.html
+++ b/cliente/produtores/produtor-3.html
@@ -15,7 +15,7 @@
     <h1 class="titulo">Fazenda Boa Vista</h1>
     <div class="produtor">
       <img src="../../images/horta.jpg" alt="Imagem de uma horta">
-      <div id="descricao">
+      <div class="descricao">
         <p>Somos a Fazenda Boa Vista, localizada em São Luiz do Purunã/PR. Há mais de 12 anos, cultivamos frutas orgânicas com cuidado e afeto. Aqui, você encontra produtos frescos, sem agrotóxicos. Experimente e sinta a diferença!</p>
         <div class="contato">
           <p>Telefone: (41) 99999-9999</p>
