--- a/cliente/produtores/produtor-1.html
+++ b/cliente/produtores/produtor-1.html
@@ -92,7 +92,28 @@
         img: '../../images/produto.png',
         quantidade: 0,
         valor_unidade: 4.90
-      }
+      },
+
+      {
+        nome: 'Espinafre (maço)',
+        img: '../../images/produto.png',
+        quantidade: 0,
+        valor_unidade: 9.90
+      },
+
+      {
+        nome: 'Rúcula (maço)',
+        img: '../../images/produto.png',
+        quantidade: 0,
+        valor_unidade: 7.20
+      },
+
+      {
+        nome: 'Escarola (maço)',
+        img: '../../images/produto.png',
+        quantidade: 0,
+        valor_unidade: 5.25
+      },
     ]
   </script>
   <script src="../../js/carrinho.js"></script>
