--- a/cliente/produtores/produtor-2.html
+++ b/cliente/produtores/produtor-2.html
@@ -92,7 +92,35 @@
         img: '../../images/produto.png',
         quantidade: 0,
         valor_unidade: 15.90
-      }
+      },
+
+      {
+        nome: 'Manjericão (maço)',
+        img: '../../images/produto.png',
+        quantidade: 0,
+        valor_unidade: 9.90
+      },
+
+      {
+        nome: 'Coentro (maço)',
+        img: '../../images/produto.png',
+        quantidade: 0,
+        valor_unidade: 19.50
+      },
+
+      {
+        nome: 'Sálvia (maço)',
+        img: '../../images/produto.png',
+        quantidade: 0,
+        valor_unidade: 13.50
+      },
+
+      {
+        nome: 'Louro (maço)',
+        img: '../../images/produto.png',
+        quantidade: 0,
+        valor_unidade: 9.95
+      },
     ]
   </script>
   <script src="../../js/carrinho.js"></script>
