--- a/cliente/produtores/produtor-3.html
+++ b/cliente/produtores/produtor-3.html
@@ -92,7 +92,21 @@
         img: '../../images/produto.png',
         quantidade: 0,
         valor_unidade: 2.30
-      }
+      },
+
+      {
+        nome: 'Pera (unidade)',
+        img: '../../images/produto.png',
+        quantidade: 0,
+        valor_unidade: 2.10
+      },
+
+      {
+        nome: 'Amora (bandeja)',
+        img: '../../images/produto.png',
+        quantidade: 0,
+        valor_unidade: 25.00
+      },
     ]
   </script>
   <script src="../../js/carrinho.js"></script>
