--- a/cliente/produtores/produtor-4.html
+++ b/cliente/produtores/produtor-4.html
@@ -92,6 +92,20 @@
         img: '../../images/produto.png',
         quantidade: 0,
         valor_unidade: 5.75
+      },
+
+      {
+        nome: 'Rúcula (maço)',
+        img: '../../images/produto.png',
+        quantidade: 0,
+        valor_unidade: 6.90
+      },
+
+      {
+        nome: 'Pepino (500g)',
+        img: '../../images/produto.png',
+        quantidade: 0,
+        valor_unidade: 4.00
       }
     ]
   </script>
