--- a/produtor/cadastro.html
+++ b/produtor/cadastro.html
@@ -26,7 +26,7 @@
                     <!-- O event passado para a função que ativa ao enviar o form serve para impedir o comportamento padrão de recarregar a página -->
                     <label for="nome">Nome:</label>
                     <input type="text" id="nome" name="nome" placeholder="Insira o nome do seu negócio" required>
-                    <!-- No form o type tem relação em como o campo é exibido ou na formatação da informação, o id é usado para estilizar e capturar os dados e o name se relaciona com o for da label -->
+                    <!-- No form o type tem relação em como o campo é exibido ou na formatação da informação, o id é usado para estilizar, capturar os dados e se relaciona com o for da label -->
                     <br>
                     <br>
                     <label for="email">E-mail:</label>
